Actions
Bug #9137
closedlibsip: comparison between pointer and zero character constant
Start date:
2018-02-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Issue from gcc 7 build:
../common/sip_add_hdrs.c: In function 'sip_add_warning': ../common/sip_add_hdrs.c:1021:29: error: comparison between pointer and zero character constant [-Werror=pointer-compare] addr[0] == '\0' || msg == '\0' || code < 100 || code > 999) { ^~ ../common/sip_add_hdrs.c:1021:25: note: did you mean to dereference the pointer? addr[0] == '\0' || msg == '\0' || code < 100 || code > 999) { ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 450563a47bb23cc8e26a56cb4a8a3fd367cc207c
commit 450563a47bb23cc8e26a56cb4a8a3fd367cc207c Author: Toomas Soome <tsoome@me.com> Date: 2018-02-21T00:52:41.000Z 9137 libsip: comparison between pointer and zero character constant Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions